--- a/signin.html
+++ b/signin.html
@@ -102,23 +102,23 @@
 
 <section id="content">
 
-    <!--&lt;!&ndash; Login &ndash;&gt;-->
-    <!--<div class="lc-block toggled" id="l-login">-->
-        <!--<div class="input-group m-b-20">-->
-            <!--<span class="input-group-addon"><i class="zmdi zmdi-account"></i></span>-->
-            <!--<div class="fg-line">-->
-                <!--<input type="text" class="form-control" placeholder="Email Address">-->
-            <!--</div>-->
-        <!--</div>-->
+    <!-- Login -->
+    <div class="lc-block toggled" id="l-login">
+        <div class="input-group m-b-20">
+            <span class="input-group-addon"><i class="zmdi zmdi-account"></i></span>
+            <div class="fg-line">
+                <input type="text" class="form-control" placeholder="Email Address">
+            </div>
+        </div>
 
-        <!--<div class="input-group m-b-20">-->
-            <!--<span class="input-group-addon"><i class="zmdi zmdi-male"></i></span>-->
-            <!--<div class="fg-line">-->
-                <!--<input type="password" class="form-control" placeholder="Password">-->
-            <!--</div>-->
-        <!--</div>-->
+        <div class="input-group m-b-20">
+            <span class="input-group-addon"><i class="zmdi zmdi-male"></i></span>
+            <div class="fg-line">
+                <input type="password" class="form-control" placeholder="Password">
+            </div>
+        </div>
 
-        <!--<div class="clearfix"></div>-->
+        <div class="clearfix"></div>
 
         <!--<div class="checkbox">-->
             <!--<label>-->
@@ -128,16 +128,17 @@
             <!--</label>-->
         <!--</div>-->
 
-        <!--<a href="" class="btn btn-login btn-danger btn-float"><i class="zmdi zmdi-arrow-forward"></i></a>-->
+        <a href="" class="btn btn-login btn-danger btn-float"><i class="zmdi zmdi-arrow-forward"></i></a>
 
-        <!--<ul class="login-navigation">-->
-            <!--<li data-block="#l-register" class="bgm-red">Register</li>-->
+        <ul class="login-navigation">
+            <li data-block="#l-register" class="bgm-red">Register</li>
+            <li data-block="#l-verify-account" class="bgm-orange">Verify Account</li>
             <!--<li data-block="#l-forget-password" class="bgm-orange">Forgot Password?</li>-->
-        <!--</ul>-->
-    <!--</div>-->
+        </ul>
+    </div>
 
     <!-- Register -->
-    <div class="lc-block toggled" id="l-register">
+    <div class="lc-block" id="l-register">
         <!--<div class="input-group m-b-20">-->
             <!--<span class="input-group-addon"><i class="zmdi zmdi-account"></i></span>-->
             <!--<div class="fg-line">-->
@@ -152,12 +153,19 @@
             </div>
         </div>
 
-        <!--<div class="input-group m-b-20">-->
-            <!--<span class="input-group-addon"><i class="zmdi zmdi-male"></i></span>-->
-            <!--<div class="fg-line">-->
-                <!--<input type="password" class="form-control" placeholder="Password">-->
-            <!--</div>-->
-        <!--</div>-->
+        <div class="input-group m-b-20">
+            <span class="input-group-addon"><i class="zmdi zmdi-male"></i></span>
+            <div class="fg-line">
+                <input type="password" class="form-control" placeholder="Password">
+            </div>
+        </div>
+
+        <div class="input-group m-b-20">
+            <span class="input-group-addon"><i class="zmdi zmdi-male"></i></span>
+            <div class="fg-line">
+                <input type="password" class="form-control" placeholder="Confirm Password">
+            </div>
+        </div>
 
         <div class="clearfix"></div>
 
@@ -172,13 +180,14 @@
         <a href="" class="btn btn-login btn-danger btn-float"><i class="zmdi zmdi-arrow-forward"></i></a>
 
         <ul class="login-navigation">
-            <!--<li data-block="#l-login" class="bgm-green">Login</li>-->
-            <li data-block="#l-forget-password" class="bgm-green">Forgot Password?</li>
+            <li data-block="#l-login" class="bgm-orange">Login</li>
+            <li data-block="#l-verify-account" class="bgm-green">Verify Account</li>
+            <!--<li data-block="#l-forget-password" class="bgm-green">Forgot Password?</li>-->
         </ul>
     </div>
 
-    <!-- Forgot Password -->
-    <div class="lc-block" id="l-forget-password">
+    <!-- Verify Account -->
+    <div class="lc-block" id="l-verify-account">
         <p class="text-left">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla eu risus. Curabitur commodo lorem fringilla enim feugiat commodo sed ac lacus.</p>
 
         <div class="input-group m-b-20">
@@ -188,13 +197,39 @@
             </div>
         </div>
 
+        <div class="input-group m-b-20">
+            <span class="input-group-addon"><i class="zmdi zmdi-confirmation-number"></i></span>
+            <div class="fg-line">
+                <input type="number" class="form-control" placeholder="Code">
+            </div>
+        </div>
+
         <a href="" class="btn btn-login btn-danger btn-float"><i class="zmdi zmdi-arrow-forward"></i></a>
 
         <ul class="login-navigation">
-            <!--<li data-block="#l-login" class="bgm-green">Login</li>-->
-            <li data-block="#l-register" class="bgm-red">Sign-in</li>
+            <li data-block="#l-login" class="bgm-green">Login</li>
+            <li data-block="#l-register" class="bgm-red">Register</li>
         </ul>
     </div>
+
+    <!-- Forgot Password -->
+    <!--<div class="lc-block" id="l-forget-password">-->
+        <!--<p class="text-left">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla eu risus. Curabitur commodo lorem fringilla enim feugiat commodo sed ac lacus.</p>-->
+
+        <!--<div class="input-group m-b-20">-->
+            <!--<span class="input-group-addon"><i class="zmdi zmdi-email"></i></span>-->
+            <!--<div class="fg-line">-->
+                <!--<input type="email" class="form-control" placeholder="Email Address">-->
+            <!--</div>-->
+        <!--</div>-->
+
+        <!--<a href="" class="btn btn-login btn-danger btn-float"><i class="zmdi zmdi-arrow-forward"></i></a>-->
+
+        <!--<ul class="login-navigation">-->
+            <!--<!--<li data-block="#l-login" class="bgm-green">Login</li>-->-->
+            <!--<li data-block="#l-register" class="bgm-red">Sign-in</li>-->
+        <!--</ul>-->
+    <!--</div>-->
 
 </section>
 </section>
