--- a/signin.html
+++ b/signin.html
@@ -20,13 +20,6 @@
 <body class="login-content">
 <header id="header">
     <ul class="header-inner">
-        <!--<li id="menu-trigger" data-trigger="#sidebar"> -->
-        <!--<div class="line-wrap">-->
-        <!--<div class="line top"></div>-->
-        <!--<div class="line center"></div>-->
-        <!--<div class="line bottom"></div>-->
-        <!--</div>-->
-        <!--</li>-->
 
         <li class="logo hidden-xs">
             <a href="index.html">OAU FaceWars</a>
@@ -34,33 +27,6 @@
 
         <li class="pull-right">
             <ul class="top-menu">
-                <!--<li id="toggle-width">-->
-                <!--<div class="toggle-switch">-->
-                <!--<input id="tw-switch" type="checkbox" hidden="hidden">-->
-                <!--<label for="tw-switch" class="ts-helper"></label>-->
-                <!--</div>-->
-                <!--</li>-->
-                <li id="top-search">
-                    <a class="tm-search" href=""></a>
-                </li>
-
-                <li class="dropdown">
-                    <a data-toggle="dropdown" class="tm-settings" href=""></a>
-                    <ul class="dropdown-menu dm-icon pull-right">
-                        <li class="hidden-xs">
-                            <a data-action="fullscreen" href=""><i class="zmdi zmdi-fullscreen"></i> Toggle Fullscreen</a>
-                        </li>
-                        <li>
-                            <a data-action="clear-localstorage" href=""><i class="zmdi zmdi-delete"></i> Clear Local Storage</a>
-                        </li>
-                        <li>
-                            <a href=""><i class="zmdi zmdi-face"></i> Privacy Settings</a>
-                        </li>
-                        <li>
-                            <a href=""><i class="zmdi zmdi-settings"></i> Other Settings</a>
-                        </li>
-                    </ul>
-                </li>
                 <li class="dropdown">
                     <a data-toggle="dropdown" class="tm-settings" href=""></a>
                     <ul class="dropdown-menu dm-icon pull-right">
@@ -84,17 +50,9 @@
                         </li>
                     </ul>
                 </li>
-                <li class="hidden-xs" id="chat-trigger" data-trigger="#chat">
-                    <a class="tm-chat" href=""></a>
-                </li>
+            </ul>
         </li>
     </ul>
-
-    <!-- Top Search Content -->
-    <div id="top-search-wrap">
-        <input type="text">
-        <i id="top-search-close">&times;</i>
-    </div>
 </header>
 
 <section id="main">
@@ -104,17 +62,18 @@
 
     <!-- Login -->
     <div class="lc-block toggled" id="l-login">
+        <h4>Login</h4>
         <div class="input-group m-b-20">
-            <span class="input-group-addon"><i class="zmdi zmdi-account"></i></span>
+            <span class="input-group-addon"><i class="zmdi zmdi-email"></i></span>
             <div class="fg-line">
-                <input type="text" class="form-control" placeholder="Email Address">
+                <input id="login-email" type="text" class="form-control" placeholder="Email Address" required="true">
             </div>
         </div>
 
         <div class="input-group m-b-20">
-            <span class="input-group-addon"><i class="zmdi zmdi-male"></i></span>
+            <span class="input-group-addon"><i class="zmdi zmdi-lock"></i></span>
             <div class="fg-line">
-                <input type="password" class="form-control" placeholder="Password">
+                <input id="login-password" type="password" class="form-control" placeholder="Password" required="true">
             </div>
         </div>
 
@@ -128,7 +87,7 @@
             <!--</label>-->
         <!--</div>-->
 
-        <a href="" class="btn btn-login btn-danger btn-float"><i class="zmdi zmdi-arrow-forward"></i></a>
+        <a href="" id="login" class="btn btn-login btn-danger btn-float"><i class="zmdi zmdi-arrow-forward"></i></a>
 
         <ul class="login-navigation">
             <li data-block="#l-register" class="bgm-red">Register</li>
@@ -145,39 +104,40 @@
                 <!--<input type="text" class="form-control" placeholder="Username">-->
             <!--</div>-->
         <!--</div>-->
+        <h4>Register</h4>
 
         <div class="input-group m-b-20">
             <span class="input-group-addon"><i class="zmdi zmdi-email"></i></span>
             <div class="fg-line">
-                <input type="email" class="form-control" placeholder="Email Address">
+                <input id="register-email" type="email" class="form-control" placeholder="Email Address">
             </div>
         </div>
 
         <div class="input-group m-b-20">
-            <span class="input-group-addon"><i class="zmdi zmdi-male"></i></span>
+            <span class="input-group-addon"><i class="zmdi zmdi-lock"></i></span>
             <div class="fg-line">
-                <input type="password" class="form-control" placeholder="Password">
+                <input id="register-password" type="password" class="form-control" placeholder="Password">
             </div>
         </div>
 
         <div class="input-group m-b-20">
-            <span class="input-group-addon"><i class="zmdi zmdi-male"></i></span>
+            <span class="input-group-addon"><i class="zmdi zmdi-lock"></i></span>
             <div class="fg-line">
-                <input type="password" class="form-control" placeholder="Confirm Password">
+                <input id="register-password-check" type="password" class="form-control" placeholder="Confirm Password">
             </div>
         </div>
 
-        <div class="clearfix"></div>
+        <!--<div class="clearfix"></div>-->
 
-        <div class="checkbox">
-            <label>
-                <input type="checkbox" value="">
-                <i class="input-helper"></i>
-                Accept the license agreement
-            </label>
-        </div>
+        <!--<div class="checkbox">-->
+            <!--<label>-->
+                <!--<input type="checkbox" value="">-->
+                <!--<i class="input-helper"></i>-->
+                <!--Accept the license agreement-->
+            <!--</label>-->
+        <!--</div>-->
 
-        <a href="" class="btn btn-login btn-danger btn-float"><i class="zmdi zmdi-arrow-forward"></i></a>
+        <a href="" id="register" class="btn btn-login btn-danger btn-float"><i class="zmdi zmdi-arrow-forward"></i></a>
 
         <ul class="login-navigation">
             <li data-block="#l-login" class="bgm-orange">Login</li>
@@ -188,23 +148,24 @@
 
     <!-- Verify Account -->
     <div class="lc-block" id="l-verify-account">
-        <p class="text-left">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla eu risus. Curabitur commodo lorem fringilla enim feugiat commodo sed ac lacus.</p>
+        <h4>Verify Account</h4>
+        <!--<p class="text-left">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla eu risus. Curabitur commodo lorem fringilla enim feugiat commodo sed ac lacus.</p>-->
 
         <div class="input-group m-b-20">
-            <span class="input-group-addon"><i class="zmdi zmdi-email"></i></span>
+            <span class="input-group-addon"><i class="zmdi zmdi-email" aria-required="true"></i></span>
             <div class="fg-line">
-                <input type="email" class="form-control" placeholder="Email Address">
+                <input id="verify-email" type="email" class="form-control" placeholder="Email Address">
             </div>
         </div>
 
         <div class="input-group m-b-20">
             <span class="input-group-addon"><i class="zmdi zmdi-confirmation-number"></i></span>
             <div class="fg-line">
-                <input type="number" class="form-control" placeholder="Code">
+                <input id="verify-code" type="number" class="form-control" placeholder="Code">
             </div>
         </div>
 
-        <a href="" class="btn btn-login btn-danger btn-float"><i class="zmdi zmdi-arrow-forward"></i></a>
+        <a href="" id="verify" class="btn btn-login btn-danger btn-float"><i class="zmdi zmdi-arrow-forward"></i></a>
 
         <ul class="login-navigation">
             <li data-block="#l-login" class="bgm-green">Login</li>
@@ -307,6 +268,31 @@
 
 <script src="js/functions.js"></script>
 <script src="js/demo.js"></script>
+<script type="text/javascript">
+
+    $(document).ready(function(){
+            //Get saved layout type from LocalStorage
+            var token = localStorage.getItem('oaufacewars-token');
+            if (token !== null) {
+//                $(window).location.attr('href', 'http://hhh');
+                var base_url = localStorage.getItem('oaufacewars-base-url');
+                $(location).attr('href', base_url)
+//                alert(token);
+            }
+        console.log("Output;");
+        console.log('location.hostname : '+location.hostname);
+        console.log('document.domain : '+document.domain);
+        console.log('window.location.hostname : '+window.location.hostname)
+
+        console.log("document.URL : "+document.URL);
+        console.log("document.location.href : "+document.location.href);
+        console.log("document.location.origin : "+document.location.origin);
+        console.log("document.location.hostname : "+document.location.hostname);
+        console.log("document.location.host : "+document.location.host);
+        console.log("document.location.pathname : "+document.location.pathname);
+    });
+
+</script>
 
 
 </body>
