--- a/download.html
+++ b/download.html
@@ -39,7 +39,8 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a href="./signin.html">Sign-In</a></li>
+                    <li id="sign-in"><a href="./signin.html">Sign-In</a></li>
+                    <li id="sign-out"><a data-action="clear-localstorage" href="">Sign-Out</a></li>
                     <li><a href="./leaderboard.html">Leaderboard</a></li>
                     <li><a href="./contact.html">Contact</a></li>
                     <li><a href="./download.html">Download</a></li>
@@ -124,11 +125,10 @@
     Copyright &copy; 2015 OAU FaceWars
 
     <ul class="f-menu">
-        <li><a href="">Home</a></li>
-        <li><a href="">Dashboard</a></li>
-        <li><a href="">Reports</a></li>
-        <li><a href="">Support</a></li>
-        <li><a href="">Contact</a></li>
+        <li><a href="./">Home</a></li>
+        <li><a href="./leaderboard.html">Leaderboard</a></li>
+        <li><a href="./contact.html">Contact</a></li>
+        <li><a href="./download.html">Download</a></li>
     </ul>
 </footer>
 
@@ -192,6 +192,7 @@
 <![endif]-->
 
 <script src="js/functions.js"></script>
+<script src="js/constants.js"></script>
 <script src="js/demo.js"></script>
 
 
